--- a/index.html
+++ b/index.html
@@ -44,22 +44,16 @@
             Helpful links:
         </h2>
         <button>
-            Uprep.lol
+            Uprep.lol https://uprep.lol/
         </button>
         <button>
-            Veracross
+            Veracross https://accounts.veracross.com/uprep/portals/login
         </button>
         <button>
-            Uprep
+            Uprep https://www.universityprep.org/
         </button>
         <button>
-            Lunch
+            Lunch https://www.universityprep.org/lunch
         </button>
-        <h3>
-            https://uprep.lol/
-            https://accounts.veracross.com/uprep/portals/login
-            https://www.universityprep.org/
-            https://www.universityprep.org/lunch
-        </h3>
     </body>
 </html>
