--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </head>
     <body>
         <h2>
-            UPrep.lel
+            silly-schedule
         </h2>
         <h1>
-            Welcome to uprep.lel, we are a student developed website that provides links, timers, and tips to get you through the school day
+            Welcome to silly-schedule, we are a student developed website that provides links, timers, and tips to get you through the school day
         </h1>
         <h2>
             Helpful links:
