--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>hi</title>
+        <title>goodbye</title>
         <style>
             h2 {
                 background-color: rgb(11, 121, 157);
