Fixed helpful links buttons

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             Helpful links:
         </h2>
         <button>
-            Uprep.lol https://uprep.lol/
+            <a href="https://uprep.lol/">Uprep.lol</a> 
         </button>
         <button>
-            Veracross https://accounts.veracross.com/uprep/portals/login
+            <a href="https://accounts.veracross.com/uprep/portals/login">Veracross</a>
         </button>
         <button>
-            Uprep https://www.universityprep.org/
+            <a href="https://www.universityprep.org/">Uprep Website</a>
         </button>
         <button>
-            Lunch https://www.universityprep.org/lunch
+            <a href="https://www.universityprep.org/lunch">Lunch</a>
         </button>
     </body>
 </html>
