--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             }
             .box {
                 height: 50px;
-                background-color: rgb(11, 121, 157);
                 margin: 0px;
             }
             body {
@@ -21,9 +20,13 @@
         </style>
     </head>
     <body>
-        <div class="box"></div>
+        <div class="box", style="background-color: rgb(11, 121, 157);"></div>
+        <div class="box", style="background-color: rgb(0, 72, 96); height: 25px;"></div>
         <h2 style="top: 1px;">
             Silly Schedule
         </h2>
+        <p style="top: 54px; margin-top:0px; color: white; position: absolute;">
+            News barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews bar
+        </p>
     </body>
 </html>
