--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
             }
             .box {
                 height: 50px;
-                background-color: rgb(22, 88, 110);
                 margin: 0px;
             }
             body {
                 margin: 0px;
-                background-color: rgb(14, 38, 71);
+                background-color: rgb(41, 41, 41);
             }
         </style>
     </head>
     <body>
-        <div class="box"></div>
+        <div class="box", style="background-color: rgb(11, 121, 157);"></div>
+        <div class="box", style="background-color: rgb(0, 72, 96); height: 25px;"></div>
         <h2 style="top: 1px;">
             Silly Schedule
         </h2>
+        <p style="top: 54px; margin-top:0px; color: white; position: absolute;">
+            News barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews bar
+        </p>
     </body>
 </html>
