--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script>
+            function uprepmouseclick() {
+                //window.open("uprep.lol", "_blank"); this might work? but its erroroing for me
+                //link uprep.lol here
+                
+            }
+        </script>
         <title>hi</title>
         <style>
             h2 {
@@ -17,6 +24,21 @@
                 margin: 0px;
                 background-color: rgb(41, 41, 41);
             }
+            button {
+                background-color: rgb(11, 121, 157);
+                margin-top: 10px;
+                color: white;
+                border: none;
+                padding: 10px 20px;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                margin-left: 10px;
+            }
+            button:hover {
+                background-color: rgb(0, 91, 127);
+                scale: 1.05;
+                
+            }
         </style>
     </head>
     <body>
@@ -28,5 +50,10 @@
         <p style="top: 54px; margin-top:0px; color: white; position: absolute;">
             News barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews barNews bar
         </p>
+        <button onclick="uprepmousclick()">
+            <Uprep>
+                uprep.lol
+            </Uprep>
+        </button>
     </body>
 </html>
