linked cloudflare site

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 
             }
             function wifiblockclick() {
-                window.open("https://one.one.one.one/", '_blank').focus();
+                window.open("wifiblocker.html", '_self').focus();
             }
 
 
