added a bunch of stuffs

--- a/wifiblocker.html
+++ b/wifiblocker.html
@@ -86,7 +86,7 @@
             For Chromebooks &#129326;
         </h3>
         <h4>
-            Chromebooks are &#128169;
+            Chromebooks are &#128169; if your this desperete just use a VPN, Proxy, or a Hotspot
         </h4>
     </body>
 </html>
