added timer basic model written by chat gpt, made funny clicky thing

--- a/wifiblocker.html
+++ b/wifiblocker.html
@@ -86,7 +86,9 @@
             For Chromebooks &#129326;
         </h3>
         <h4>
-            Chromebooks are &#128169; if your this desperete just use a VPN, Proxy, or a Hotspot
+            Chromebooks are &#128169; if your this desperete just use a VPN, Proxy, or a Hotspot, or maybe your homework?
         </h4>
     </body>
 </html>
+
+
