Lots of changes...

--- a/crazygms.html
+++ b/crazygms.html
@@ -4,3 +4,27 @@
                 { start: "11:55", end: "12:30", name: "Lunch" },
                 { start: "12:30", end: "13:40", name: "C block" },
                 { start: "13:40", end: "14:55", name: "D block" }
+
+<html>
+    <body>
+
+        <embed src="https://www.universityprep.org/lunch" style="width:500px; height: 300px;">
+    </body>
+
+</html>
+<div class="schedbox" style="background-color: rgb(11, 121, 157); width: 92px; margin-left: 760px; margin-top: -370px;">
+    <h2 style="background-color: rgb(0, 72, 96); color: white; margin-left: 0px;">
+        Schedule 
+    </h2>
+    
+    <hr style="color: white; line-height: 10px; height: 4px; background-color: white; border-radius: 5px;">
+    <h3 style="margin-top: 40px;">
+        8:25 - 9:35
+    </h3>
+    <hr style="color: white; line-height: 10px; height: 4px; background-color: white; border-radius: 5px;">
+    <h3>
+        9:35 - 10:40
+    </h3>
+</div>
+</schedbox>
+                
