added time until break countdown, this filled much of the empty space

--- a/crazygms.html
+++ b/crazygms.html
@@ -6,10 +6,14 @@
                 { start: "13:40", end: "14:55", name: "D block" }
 
 <html>
-    <body>
-
-        <iframe src="https://www.turbowarp.org" style="width:500px; height: 300px;">
-    </body>
+    <iframe 
+    src="https://universityprep.schoology.com/home" 
+    width="100%" 
+    height="600px" 
+    frameborder="0">
+    Your browser does not support iframes.
+    </iframe>
+    <a href="https://universityprep.schoology.com/home" target="_blank">Visit the Schoology Page</a>
 
 </html>
 
