--- a/crazygms.html
+++ b/crazygms.html
@@ -7,13 +7,13 @@
 
 <html>
     <iframe 
-    src="https://universityprep.schoology.com/home" 
+    src="https://poki.com/" 
     width="100%" 
     height="600px" 
     frameborder="0">
     Your browser does not support iframes.
     </iframe>
-    <a href="https://universityprep.schoology.com/home" target="_blank">Visit the Schoology Page</a>
+    <a href="https://poki.com/" target="_blank">Visit the Schoology Page</a>
 
 </html>
 
