--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="dark-blue-bar">
             <div class="scrolling-bar">
                 <div class="scrolling-text">
-                    New site ----- uprep.lol is cool ----- what came first the chicken or the egg? ----- happy holidays ----- "when one door closes another one opens" Boeing said that ----- how is your day ----- i made cool scrolling bar ----- finals was fun ----- gib charger
+                    New site ----- uprep.lol is cool ----- what came first the chicken or the egg? ----- break nears... ----- i hope good grades ----- how is your day ----- i made cool scrolling bar ----- finals was fun ----- gib charger
                 </div>
             </div>
         </div>
@@ -390,11 +390,11 @@
             <h2>
                 Time Until Break:
             </h2>
-            <h2 id="countdown" style="margin-top: 50px; background-color: green;">
-                Loading...
+            <h2 id="countdown" style="margin-top: 120px; background-color: green; font-weight: bolder;">
+                Loading... just a sec
             </h2>
-            <h2 id="countdownminsec" style="margin-top: 100px;">
-                Loading...
+            <h2 id="countdownminsec" style="margin-top: 200px;">
+                Loading... if this is not loading then something went wrong
             </h2>
         </div>
         
@@ -412,7 +412,7 @@
             const timeLeft = targetDate - now;
 
             if (timeLeft <= 0) {
-                document.getElementById("countdown").textContent = "The countdown has ended!";
+                document.getElementById("countdown").textContent = "Happy Winter Break!!!!!!";
                 return;
             }
 
