final tik tok ryan will be mad

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
         <div id="countdownbox" class="box5" style="color: white; margin-left: 600px; margin-top: -537px;">
             <h2>
-                Time Until Break:
+                Time Until Tik Tok Ban!!!!!!!! yayyayayayyayya:
             </h2>
             <h2 id="countdown" style="margin-top: 120px; background-color: green; font-weight: bolder;">
                 Loading... just a sec
