--- a/crazygms.html
+++ b/crazygms.html
@@ -5,6 +5,16 @@
                 { start: "12:30", end: "13:40", name: "C block" },
                 { start: "13:40", end: "14:55", name: "D block" }
 
+                { start: "08:25", end: "10:00", name: "block A" },
+                { start: "10:00", end: "10:15", name: "Snack" },
+                { start: "10:15", end: "11:45", name: "block B" },
+                { start: "11:45", end: "12:20", name: "Lunch" },
+                { start: "12:20", end: "13:45", name: "block C" },
+                { start: "13:45", end: "14:00", name: "Snack" },
+                { start: "14:00", end: "14:55", name: "block D" },
+                ];
+
+
 <html>
     <iframe 
     src="https://poki.com/" 
