--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 
         
             const schedule = [
-            { start: "08:25", end: "10:00", name: "block A" },
-            { start: "10:00", end: "10:15", name: "Snack" },
-            { start: "10:15", end: "11:45", name: "block B" },
-            { start: "11:45", end: "12:20", name: "Lunch" },
-            { start: "12:20", end: "13:45", name: "block C" },
-            { start: "13:45", end: "14:00", name: "Snack" },
-            { start: "14:00", end: "14:55", name: "block D" },
+            { start: "08:25", end: "09:35", name: "A block" },
+            { start: "09:35", end: "10:45", name: "Office Hours" },
+            { start: "10:45", end: "11:55", name: "B block" },
+            { start: "11:55", end: "12:30", name: "Lunch" },
+            { start: "12:30", end: "13:40", name: "C block" },
+            { start: "13:40", end: "14:55", name: "D block" },
             ];
 
             function getTimeLeft(endTime) {
