more accurate, removed hi leo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             { start: "10:45", end: "11:55", name: "B block" },
             { start: "11:55", end: "12:30", name: "Lunch" },
             { start: "12:30", end: "13:40", name: "C block" },
-            { start: "13:40", end: "14:55", name: "D block" },
+            { start: "13:40", end: "13:45", name: "C block" },
+            { start: "13:45", end: "14:55", name: "D block" },
             ];
 
             function getTimeLeft(endTime) {
@@ -358,31 +359,31 @@
             
             
             <h3 style="margin-top: 20px;">
-                8:25 - 10:00: Block A
+                8:25 - 9:35: Block A
             </h3>
             <hr>
             <h3>
-                10:00 - 10:15: Snack
+                9:35 - 10:45: Office Hours
             </h3>
             <hr>
             <h3>
-                10:15 - 10:45: Block B
+                10:45 - 11:55: Block B
             </h3>
             <hr>
             <h3>
-                11:45 - 12:20: Lunch
+                11:55 - 12:30: Lunch
             </h3>
             <hr>
             <h3>
-                12:20 - 1:45: Block C
+                12:30 - 1:40: Block C
             </h3>
             <hr>
             <h3>
-                1:45 - 2:00: Snack
+                1:40 - 1:45: Passing
             </h3>
             <hr>
             <h3>
-                2:00 - 2:55: Block D
+                1:45 - 2:55: Block D
             </h3>
         </div>
 
