--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             { start: "10:45", end: "11:55", name: "B block" },
             { start: "11:55", end: "12:30", name: "Lunch" },
             { start: "12:30", end: "13:40", name: "C block" },
-            { start: "13:40", end: "13:45", name: "C block" },
+            { start: "13:40", end: "13:45", name: "Passing" },
             { start: "13:45", end: "14:55", name: "D block" },
             ];
 
