--- a/wifiblocker.html
+++ b/wifiblocker.html
@@ -74,7 +74,11 @@
         <div class="box" style="background-color: rgb(11, 121, 157);"></div>
         <div class="box" style="background-color: rgb(0, 72, 96); height: 25px;"></div>
         <h2 style="top: 1px;" onclick="mainclick()">Silly Schedule</h2>
-        
+        <div class="box">
+            <h3 style="margin-left: 30px;">
+                You Found the Secret!
+            </h3>
+        </div>
         <h3>
             For Windows, Mac and, Linux
         </h3>
