--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 window.open("https://uprep.lol", '_blank').focus();
             }
             function wifiblockclick() {
-                window.open("wifiblocker.html", '_self').focus();
+                window.open("wifiblocker.html", '_blank').focus();
             }
             function lazerdogegame() {
                 window.open("Laser Bolt Web (5).html", '_blank').focus()
@@ -32,8 +32,8 @@
             function clickerclick() {
                 clicks = clicks+1
                 document.getElementById("clicky").textContent = clicks
-                if (clicks > 50) {
-                wifiblockclick()
+                if (clicks == 61) {
+                    wifiblockclick()
                 }
             }
             function veracross() {
@@ -305,7 +305,7 @@
         <div class="dark-blue-bar">
             <div class="scrolling-bar">
                 <div class="scrolling-text">
-                    New site ----- uprep.lol is cool ----- what came first the chicken or the egg? ----- break nears... ----- i hope good grades ----- how is your day ----- i made cool scrolling bar ----- finals was fun ----- gib charger
+                    Whats up? The ceiling!......uprep.lol is cool......what came first the chicken or the egg?......break nears......i hope good grades get u......how is your day......i made cool scrolling bar......hehe......Is it just me or is there a charger shortage?
                 </div>
             </div>
         </div>
