happy mid winter break!

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             const timeLeft = targetDate - now;
 
             if (timeLeft <= 0) {
-                document.getElementById("countdown").textContent = "Happy Winter Break!!!!!!";
+                document.getElementById("countdown").textContent = "Happy Mid-Winter Break!!!!!!";
                 return;
             }
 
