typos fixed, added spring break timer:)

--- a/About.html
+++ b/About.html
@@ -346,7 +346,7 @@
         </h2>
 
         <h2 style="margin-top: -75px; margin-left: 100px; color: green; font-weight: bolder;">
-           Therfore its your fault if you're late or smt
+           Therefore its your fault if you're late or smt
         </h2>
         <h2 style="font-size: small; margin-top: 250px;">
             Silly-Schedule was last updated on 2/14/2025
