--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
             const schedule = [
             { start: "08:25", end: "09:35", name: "A block" },
-            { start: "09:35", end: "10:45", name: "Office Hours" },
+            { start: "09:35", end: "10:45", name: "Advisory" },
             { start: "10:45", end: "11:55", name: "B block" },
             { start: "11:55", end: "12:30", name: "Lunch" },
             { start: "12:30", end: "13:40", name: "C block" },
@@ -467,7 +467,7 @@
             const timeLeft = targetDate - now;
 
             if (timeLeft <= 0) {
-                document.getElementById("countdown").textContent = "Happy Mid-Winter Break!!!!!!";
+                document.getElementById("countdown").textContent = "Happy Spring Break!!!!!!";
                 return;
             }
 
